--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3356/noshow_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mariadb://localhost:3356/crud?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: love1004
 
@@ -20,3 +20,12 @@ spring:
       static-locations: file:src/main/resources/static/
       cache:
         period: 0
+
+  jpa:
+    show-sql: true
+    hibernate:
+      use-new-id-generator-mappings: true
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
