--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,12 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.4.4'
 
 	// 스프링 시큐리티
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
 
 
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
